# desktop-order-system

./: # Code Citations  .env.example  .gitignore  AUDIT_TRAIL.md  AUTO_VARIABILITY_CLASSIFICATION.md  AUTO_VARIABILITY_IMPLEMENTATION_SUMMARY.md  BASELINE_FORECAST_SUMMARY.md  CALENDAR_IMPLEMENTATION_SUMMARY.md  CALENDAR_MODULE.md  CENSORED_DAYS_FEATURE.md  CHECKLIST_BUILD.md  CSL_MC_QUANTILE_IMPLEMENTATION.md  CSL_MC_QUANTILE_QUICK_REFERENCE.md  CSL_POLICY_IMPLEMENTATION.md  CSL_POLICY_QUICK_REFERENCE.md  DATASET_README.md  DEMAND_ADJUSTED_WASTE_RISK_QUICK_REFERENCE.md  DEMAND_ADJUSTED_WASTE_RISK_SUMMARY.md  DEMAND_ADJUSTED_WASTE_RISK_TEST_RESULTS.md  DEMAND_VARIABILITY_INTEGRATION.md  DEVELOPMENT.md  DesktopOrderSystem-onefile.spec  DesktopOrderSystem.spec  EOD_STOCK_FEATURE.md  EVENT_UPLIFT_INTEGRATION.md  EXCEPTIONS_TAB.md  EXPIRY_THRESHOLD_CONFIG.md  EXPLAINABILITY_OPERATIONAL_VISIBILITY.md  FASE0_RICOGNIZIONE_STORAGE.md  FASE1_SCHEMA_SQLITE.md  FASE2_STORAGE_LAYER.md  FASE3_REPOSITORY_DAL.md  FASE4_MIGRATION_TOOL.md  FASE5_GUI_INTEGRATION.md  FASE5_GUI_INTEGRATION_COMPLETE.md  FASE6_GOLDEN_TESTS.md  FASE_7_COMPLETE.md  FIX_COERENZA_STOCK.md  FORECAST_MODULE.md  FORMULA_ORDINI_REDESIGN.md  (+97 more)
.github/: copilot-instructions.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/dos_backend/: __init__.py  config.py  db.py  dependencies.py  forecast.py  main.py  promo_calendar.py  replenishment_policy.py  repositories.py  schemas.py  smoke.py
backend/dos_backend/analytics/: __init__.py  closed_loop.py  kpi.py  pipeline.py  service_level.py
backend/dos_backend/api/: __init__.py  app.py  auth.py  deps.py  errors.py  idempotency.py  main.py  schemas.py
backend/dos_backend/domain/: contracts.py  demand_builder.py  event_uplift.py  holidays.py  ledger.py  migration.py  models.py  modifier_builder.py  promo_uplift.py
backend/dos_backend/persistence/: csv_layer.py  storage_adapter.py
backend/dos_backend/routers/: __init__.py  dispatches.py  eod.py  exceptions.py  health.py  receipts.py  skus.py  stock.py
backend/dos_backend/utils/: colli_utils.py  paths.py  sku_validation.py
backend/dos_backend/workflows/: __init__.py  daily_close.py  exception.py  order.py  receiving.py  receiving_v2.py  replenishment.py  sku_import.py
backend/src/: __init__.py  main.py
backend/src/domain/: calendar.py
backend/src/persistence/: storage_adapter.py
backend/src/routers/: __init__.py  exceptions.py  health.py  receipts.py  skus.py  stock.py
backend/src/utils/: error_formatting.py  paths.py
backend/tests/: conftest.py  test_api_dispatches.py  test_api_integration.py
data/: app.db  audit_log.csv  event_uplift_rules.csv  holidays.json  kpi_daily.csv  lots.csv  lots.csv.backup.20260210_123013  lots.csv.backup.20260210_123040  lots.csv.backup.20260210_123153  lots.csv.backup.20260210_123210  order_logs.csv  order_logs.pre_migration.20260216_113444.csv  promo_calendar.csv  receiving_logs.csv  sales.csv  sales.pre_migration.20260216_113444.csv  settings.json  sku_scores_daily.csv  skus.csv  skus_fixed.csv  (+3 more)
src/: db.py  (+7 more)
(+869 files in other folders)
