[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "dos-backend"
version = "0.1.0"
description = "Core domain, persistence and workflow library for desktop-order-system, plus optional FastAPI backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# ---------------------------------------------------------------------------
# Runtime dependencies — core only (no GUI, no FastAPI)
# sqlite3, csv, pathlib, etc. are stdlib — not listed here.
# ---------------------------------------------------------------------------
dependencies = [
    # Used by analytics / forecast / uncertainty modules
    "numpy>=1.26",
    # Used in persistence layer for flexible date parsing
    "python-dateutil>=2.8.2",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Full REST API layer (FastAPI + Uvicorn server)
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

# Development / testing utilities
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",          # async test client for FastAPI
    "ruff>=0.4",            # linter/formatter
    "mypy>=1.9",
]

# All optional groups combined (convenience)
all = [
    "dos-backend[api]",
    "dos-backend[dev]",
]

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]          # search starting at backend/
include = ["dos_backend*"]  # include dos_backend/ and all sub-packages

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (linter / formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"   # minimum supported Python version

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]   # long lines accepted in legacy modules

# ---------------------------------------------------------------------------
# mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"   # minimum supported; CI also tests 3.12
ignore_missing_imports = true
strict = false
